# PALawSearch

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  RESULTS.md  config.py  docker-compose.yml  index.py  indexing_script.py  justfile  pyproject.toml  search_api.py
.claude/: settings.local.json
api/: app.py  routes.py
cache/: redis.py
config/: settings.py
docs/: ENV_NOTES.md
eval/: compute_kappa.py  external_benchmark.py  judge.py  label_helper.py  metrics.py  run_eval.py  run_recall_gap.py
graph/: build.py  resolve.py  split.py
indexing/: bm25_indexer.py  dense_indexer.py  embed.py  index_dense_from_file.py
ingest/: download.py  inspect_sample.py  parse.py
models/: cross_encoder.py  dual_encoder.py  encoder.py
pa_lawsearch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rag/: rag_service.py
search/: bm25_reranker.py  bm25_searcher.py  dense_reranker.py  dense_searcher.py  hybrid_rrf.py
tests/: test_leakage.py  test_metrics.py
training/: mine_pairs.py  train_encoder.py  train_reranker.py
